--- a/app/js/states/movie_list/movie_list.html
+++ b/app/js/states/movie_list/movie_list.html
@@ -1,19 +1,20 @@
 <ion-content>
-<!--
-   <div class="address">
-       <h3>{{place.name}}</h3>
-       <address>{{place}}
+
+   <div class="spacing address">
+       <h3 class="white"><strong>{{place.name}}</strong></h3>
+       <address>{{place.formatted_address}}
        </address>
+       <p></p>
     </div>
--->
+
     <div class="item item-divider">
         <h2>Movie list</h2>
     </div>
     <ion-list class="disable-user-behavior">
-         <ion-item class="item" ng-repeat="movie in screeningsCine">
-              <h2>{{movie.movieName}}</h2>
+         <ion-item class="item" ng-repeat="cinema in screeningsCine">
+              <h2>{{cinema.movieName}}</h2>
               <ul>
-                  <li ng-repeat="screeningTime in movie.screenings" class="inline"><p>{{screeningTime.screeningTime}}  <strong>{{screeningTime.type}}</strong></p></li>
+                  <li ng-repeat="screeningTime in cinema.screenings" class="inline"><p>{{screeningTime.screeningTime}}  <strong>{{screeningTime.type}}</strong></p></li>
              </ul>
         </ion-item>
     </ion-list>
